--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <!-- <div class="board"></div> -->
-    <script src="d3.js" charset="utf-8"></script>
+    <script src="Library/d3.js" charset="utf-8"></script>
     <script src="d3game.js" charset="utf-8"></script>
 
   </body>
